--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,6 @@ configure(allprojects - project(':jgr-r')) {
 
     compileJava {
         options.encoding = 'UTF-8'
-        options.fork = true
-        options.forkOptions.javaHome = new File("${System.properties.'java.home'}")
-        options.compilerArgs << "-XDignore.symbol.file=true"
     }
 
     javadoc {
@@ -60,6 +57,7 @@ project(":jgr-java") {
         compile project(":ibase")
         compile project(":javagd")
         compile project(":REngine")
+        compile 'com.massisframework:orange-extensions:1.3.1'
     }
 
     jar {
