--- a/jgr-r/src/main/JGR/DESCRIPTION
+++ b/jgr-r/src/main/JGR/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: JGR
 Version: 1.8-0
-Title: JGR - Java GUI for R
+Title: Java GUI for R
 Author: Markus Helbig <info@markushelbig.de>, Simon Urbanek, Ian Fellows
 Maintainer: Markus Helbig <info@markushelbig.de>
 Depends: R (>= 2.10), rJava (>= 0.9-5), JavaGD (>= 0.6)
