--- a/jgr-r/src/main/raw/DESCRIPTION
+++ b/jgr-r/src/main/raw/DESCRIPTION
@@ -3,8 +3,9 @@ Version: @VERSION@
 Title: JGR - Java GUI for R
 Author: Markus Helbig <info@markushelbig.de>, Simon Urbanek, Ian Fellows
 Maintainer: Markus Helbig <info@markushelbig.de>
+SystemRequirements:	Java JDK 1.4 or higher
 Depends: R (>= 2.10), rJava (>= 0.9-5), JavaGD (>= 0.6)
 Suggests: XLConnect
-Description: Java GUI for R - cross-platform, universal and unified Graphical User Interface for R. For full functionality on Windows and Mac OS X JGR requires a start application which depends on your OS. This can be downloaded from JGR website: http://rforge.net/JGR/
+Description: Java GUI for R - cross-platform, universal and unified Graphical User Interface for R. For full functionality on Windows and Mac OS X JGR requires a start application which depends on your OS.
 License: GPL-2
 URL: http://rforge.net/JGR/
