fixed three more NOTEs

--- a/jgr-r/src/main/JGR/NAMESPACE
+++ b/jgr-r/src/main/JGR/NAMESPACE
@@ -1,3 +1,4 @@
 exportPattern(".+")
+importFrom("utils", "available.packages", "browseURL", "contrib.url", "download.file", "install.packages")
 import(rJava)
 import(JavaGD)
