--- a/jgr-r/src/main/raw/DESCRIPTION
+++ b/jgr-r/src/main/raw/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: JGR
 Version: @VERSION@
 Title: Java GUI for R
+Date: @DATE@
 Author: Markus Helbig <info@markushelbig.de>, Simon Urbanek, Ian Fellows
 Maintainer: Markus Helbig <info@markushelbig.de>
 SystemRequirements:	Java JDK 1.4 or higher
@@ -9,3 +10,4 @@ Suggests: XLConnect
 Description: Java GUI for R - cross-platform, universal and unified Graphical User Interface for R. For full functionality on Windows and Mac OS X JGR requires a start application which depends on your OS.
 License: GPL-2
 URL: http://rforge.net/JGR/
+Packaged: @DATE@
