--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ project(":jgr-java") {
         dependencies {
             exclude(project(':javagd'))
             exclude(project(':rJava'))
-            exclude(dependency('com.massisframework:orange-extensions:1.3.1'))
+//            exclude(dependency('com.massisframework:orange-extensions:1.3.1'))
 //            exclude(dependency('net.sf.jedit-syntax:jedit-syntax:2.2.2'))
         }
     }
